--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <title>Luciana Carvalho Portfolio</title>
   </head>
   <body>
-      <div class="d-flex bg-warning">
-    <h1>Hello World</h1>
-    <p>Hi There</p>
-   <i class="fab fa-instagram"></i>
-    </div>
+    <div class="hero">
+     <p>👋 Hello, I am</p>
+     <h1>Luciana Carvalho</h1>
+     <h2 class="mb-5">Front-end developer based in Amsterdam</h2>
+     <div> <a href="#" class="btn btn-primary">Contact me</a></div>
+     </div>
+    
   </body>
 </html>
