--- a/work.html
+++ b/work.html
@@ -32,8 +32,33 @@
     <div class="content-container container">
      
           <div class="content">
-            <h1 class="mb-4">Hi I am Luciana Carvalho</h1>
-          
+            <h1 class="mb-5">Take a look at what I've been working on!</h1>
+          <div class="row">
+              <div class="col-md-6 mb-4">
+                  <img src="img/yogurt.png" alt="" class="img-fluid mb-3 rounded"> 
+                  <h3 class="text-center m-0">Yogurt Project</h3>
+                  <p class="text-center text-muted">Built with HTML and CSS</p>
+
+              </div>
+               <div class="col-md-6 mb-4">
+                  <img src="img/weather.png" alt="" class="img-fluid mb-3 rounded"> 
+                  <h3 class="text-center m-0">Weather Project</h3>
+                  <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+
+              </div>
+                <div class="col-md-6 mb-4">
+                  <img src="img/dictionary.png" alt="" class="img-fluid mb-3 rounded"> 
+                  <h3 class="text-center m-0">Dictionary Project</h3>
+                  <p class="text-center text-muted">Built with HTML, CSS and React</p>
+
+              </div>
+                <div class="col-md-6 mb-4">
+                  <img src="img/translation.png" alt="" class="img-fluid mb-3 rounded"> 
+                  <h3 class="text-center m-0">Translation Project</h3>
+                  <p class="text-center text-muted">Built with HTML, CSS and React</p>
+
+              </div>
+          </div>
       </div>
     </div>
   </body>
