--- a/index.html
+++ b/index.html
@@ -110,6 +110,30 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h4>
+            Work Inquiry
+          </h4>
+          <p class="text-muted">Let's work togather</p>
+          </div>
+         <div>
+            <a href="" class="btn btn-primary">Contact Me</a>
+        </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5 ">
+        <a href="mailto:lubecarvalho@hotmail.com" class="email-link">lubecarvalho@hotmail.com</a>
+      </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a href="https://www.instagram.com/luciana_carvalho_andrade/" target="_blank"> <i class="fab fa-instagram"></i></a>
+          <a href="https://github.com/Luniau" target="_blank"> <i class="fab fa-github"></i></a>
+          <a href="https://www.facebook.com/luciana.c.andrade"target="_blank"> <i class="fab fa-facebook"></i></a>
+       <a href="https://www.linkedin.com/in/luciana-carvalho-andrade-49b6539/"target="_blank"> <i class="fab fa-linkedin"></i></a>
+       
+       
+        </div>
+      </footer>
     </div>
   </body>
 </html>
