--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Please contact Luciana Carvalho for more information. Luciana Carvalho is a front-end engineer based in Amsterdam, currently looking for new oportunities as internships, junior part time and full-time positions for front-end development. "
+    />
+    <title>Contat Front-end developer Luciana Carvalho - Luciana Carvalho</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,9 +31,29 @@
       src="https://kit.fontawesome.com/0cb61ddeb7.js"
       crossorigin="anonymous"
     ></script>
-    <title>Luciana Carvalho Portfolio About</title>
+   
   </head>
   <body>
+     <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="img/cute cat.jpg" class="logo"
+      alt="Luciana logo" />
+        <ul>
+          <li >
+            <a href="/" title="Homepage" > Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Luciana"> About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Luciana's work"> Work</a>
+          </li>
+          <li class="active">
+            <a href="/contact.html" title="Contact Luciana"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
      
           <div class="content">
@@ -42,6 +67,69 @@
             <p><a href="https://www.Linkedin.com/Luciana" target="_blank">@Luciana</a></p>
          
       </div>
+       <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work togather</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-primary"
+              title="Contact Luciana"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:lubecarvalho@hotmail.com"
+            class="email-link"
+            title="Email Luciana"
+            >lubecarvalho@hotmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a
+            href="https://www.instagram.com/luciana_carvalho_andrade/"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/Luniau"
+            target="_blank"
+            title="GitHub Profile"
+          >
+            <i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/luciana.c.andrade"
+            target="_blank"
+            title="Facebook Profile"
+          >
+            <i class="fab fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/luciana-carvalho-andrade-49b6539/"
+            target="_blank"
+            title="Linkedin Profile"
+          >
+            <i class="fab fa-linkedin"></i
+          ></a>
+        </div>
+        <p class="text-center mt-5">
+          👩‍💻 This project was coded by Luciana Carvalho, and it is
+          <a
+            href="https://github.com/Luniau/Final-Portfolio"
+            target="_blank"
+          >open-sourced.</a>
+        </p>
+      </footer>
     </div>
   </body>
 </html>
