--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Luciana Carvalho is a front-end engineer based in Amsterdam, currently looking for new oportunities as internships, junior part time and full-time positions for front-end development. "
+    />
+    <title>Front-end developer - Luciana Carvalho</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,25 +31,23 @@
       src="https://kit.fontawesome.com/0cb61ddeb7.js"
       crossorigin="anonymous"
     ></script>
-    <title>Luciana Carvalho Portfolio</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="img/cute cat.jpg" class="logo"
-      alt="" />
+        <img src="img/cute cat.jpg" class="logo" alt="Luciana logo" />
         <ul>
-          <li>
-            <a href="/" class="active"> Home</a>
+          <li class="active">
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Luciana"> About</a>
           </li>
           <li>
-            <a href="/work.html"> Work</a>
+            <a href="/work.html" title="Luciana's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Luciana"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -53,7 +56,11 @@
       <p>👋 Hello, I am</p>
       <h1>Luciana Carvalho</h1>
       <h2 class="mb-5">Front-end developer based in Amsterdam</h2>
-      <div><a href="#" class="btn btn-primary">Contact me</a></div>
+      <div>
+        <a href="/contact.html" class="btn btn-primary" title="Contact Luciana"
+          >Contact me</a
+        >
+      </div>
     </div>
     <p class="text-center m-5">
       Featured Project I am work on it and old project
@@ -61,7 +68,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="img/yogurt.png" class="img-fluid" alt="" />
+          <img src="img/yogurt.png" class="img-fluid" alt="Yogurt Project" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -72,7 +79,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn-secundary-button"> Lear more </a>
+            <a href="/work.html" class="btn-secundary-button"> Lear more </a>
           </div>
         </div>
       </div>
@@ -86,16 +93,20 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn-secundary-button"> Lear more </a>
+            <a href="/work.html" class="btn-secundary-button"> Lear more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="img/weather.png" class="img-fluid" alt="" />
+          <img src="img/weather.png" class="img-fluid" alt="Weather project" />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="img/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="img/dictionary.png"
+            class="img-fluid"
+            alt="Dictionary project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -106,33 +117,72 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn-secundary-button"> Lear more </a>
+            <a href="/work.html" class="btn-secundary-button"> Lear more </a>
           </div>
         </div>
       </div>
       <footer>
-        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
           <div>
-          <h4>
-            Work Inquiry
-          </h4>
-          <p class="text-muted">Let's work togather</p>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work togather</p>
           </div>
-         <div>
-            <a href="" class="btn btn-primary">Contact Me</a>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-primary"
+              title="Contact Luciana"
+              >Contact Me</a
+            >
+          </div>
         </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:lubecarvalho@hotmail.com"
+            class="email-link"
+            title="Email Luciana"
+            >lubecarvalho@hotmail.com</a
+          >
         </div>
-        <div class="d-flex justify-content-center mb-5 ">
-        <a href="mailto:lubecarvalho@hotmail.com" class="email-link">lubecarvalho@hotmail.com</a>
-      </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://www.instagram.com/luciana_carvalho_andrade/" target="_blank"> <i class="fab fa-instagram"></i></a>
-          <a href="https://github.com/Luniau" target="_blank"> <i class="fab fa-github"></i></a>
-          <a href="https://www.facebook.com/luciana.c.andrade"target="_blank"> <i class="fab fa-facebook"></i></a>
-       <a href="https://www.linkedin.com/in/luciana-carvalho-andrade-49b6539/"target="_blank"> <i class="fab fa-linkedin"></i></a>
-       
-       
+          <a
+            href="https://www.instagram.com/luciana_carvalho_andrade/"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/Luniau"
+            target="_blank"
+            title="GitHub Profile"
+          >
+            <i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/luciana.c.andrade"
+            target="_blank"
+            title="Facebook Profile"
+          >
+            <i class="fab fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/luciana-carvalho-andrade-49b6539/"
+            target="_blank"
+            title="Linkedin Profile"
+          >
+            <i class="fab fa-linkedin"></i
+          ></a>
         </div>
+        <p class="text-center mt-5">
+          👩‍💻 This project was coded by Luciana Carvalho, and it is
+          <a
+            href="https://github.com/Luniau/Final-Portfolio"
+            target="_blank"
+          >open-sourced.</a>
+        </p>
       </footer>
     </div>
   </body>
